re PR rtl-optimization/12926 (Wrong value after assignment in initialize list using bit-fields)

PR optimization/12926
	* expr.c (expand_assignment) [COMPONENT_REF]: Don't put
	the UNCHANGING_RTX_P flag on memory references to read-only
	components that are not addressable.

From-SVN: r73542